...
    case cleaning = "Cleaning"
    case clothing = "Clothing"
    case dairy = "Dairy"
    case electronics = "Electronics"
    case frozenFoods = "Frozen Foods"
    case garden = "Garden"
    case groceries = "Groceries"
    case health = "Health"
    case household = "Household"
    case kitchen = "Kitchen"
    case laundry = "Laundry"
    case meat = "Meat & Seafood"
    case office = "Office"
...
